// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Filter with single instance with multiple attributes renders correctly 1`] = `
<DocumentFragment>
  <div
    class="filter-container filter-custom-class"
    data-focusindex="0"
  >
    <div
      class="filter-selector"
    >
      <div
        class="filter-selector-content"
      >
        <button
          aria-controls="TextFilter1-filter-selectors"
          aria-expanded="false"
          aria-haspopup="true"
          class="btn btn-default filter-selector-button button-icon equal"
        >
           
        </button>
      </div>
    </div>
    <input
      class="form-control filter-input"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with no context renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
    The Text filter widget must be placed inside the header of the Data grid 2.0 or Gallery widget.
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with single attribute renders correctly 1`] = `
<DocumentFragment>
  <div
    class="filter-container filter-custom-class"
    data-focusindex="0"
  >
    <div
      class="filter-selector"
    >
      <div
        class="filter-selector-content"
      >
        <button
          aria-controls="TextFilter1-filter-selectors"
          aria-expanded="false"
          aria-haspopup="true"
          class="btn btn-default filter-selector-button button-icon equal"
        >
           
        </button>
      </div>
    </div>
    <input
      class="form-control filter-input"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with wrong attribute's type renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
    The attribute type being used for Text filter is not 'Hashed string or String'
  </div>
</DocumentFragment>
`;

exports[`Text Filter with single instance with wrong multiple attributes' types renders error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
  >
    The Text filter widget can't be used with the filters options you have selected. It requires a "Hashed string or String" attribute to be selected.
  </div>
</DocumentFragment>
`;
